[package]
name = "specanneca"
version = "0.1.0"
authors = ["ChrisRodgers-code <60756647+ChrisRodgers-code@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotlib = "0.5.1"
num = "0.3.0"
rand = "0.7.3"